--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,4 @@
 {
   "buildCommand": "npm run vercel-build",
-  "outputDirectory": ".",
-  "functions": {
-    "api/chat.js": {
-      "maxDuration": 30
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "outputDirectory": "."
 }
