--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>373125623062-35efhamnne6an5s3b2m2btm63gtamn2k.apps.googleusercontent.com</string>
+	<string>373125623062-c17c45344c8a067d807437.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.373125623062-35efhamnne6an5s3b2m2btm63gtamn2k</string>
+	<string>com.googleusercontent.apps.373125623062-c17c45344c8a067d807437</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCSQeppkOl2ImmPo7Xgw0wl5B0mfqwCWEA</string>
 	<key>GCM_SENDER_ID</key>
