Fix Vercel config for static deployment - no Flutter build required

--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,4 @@
 {
-  "buildCommand": null,
-  "outputDirectory": "build/web",
-  "installCommand": null,
-  "framework": null,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cross-Origin-Opener-Policy",
-          "value": "same-origin-allow-popups"
-        },
-        {
-          "key": "Cross-Origin-Embedder-Policy",
-          "value": "unsafe-none"
-        }
-      ]
-    }
-  ]
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": "."
 }
