--- a/.vercelignore
+++ b/.vercelignore
@@ -1,28 +1,30 @@
 # Only exclude development files - keep all built web assets
+
 .dart_tool/
 .packages
 .pub-cache/
 .pub/
 
-# Exclude source code since we're using pre-built assets
+# Source code (not needed for static deployment)
+
 lib/
 test/
 web/
 
-# Keep the build directory
-!build/
-
 # Flutter config files (not needed for static deployment)
+
 pubspec.yaml
 pubspec.lock
 analysis_options.yaml
 
 # Documentation
+
 README.md
-*.md
+\*.md
 !README.md
 
 # Platform-specific folders
+
 android/
 ios/
 linux/
@@ -30,34 +32,42 @@ macos/
 windows/
 
 # IDE
+
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
+_.swp
+_.swo
+\*~
 
 # OS
+
 .DS_Store
 Thumbs.db
 
 # Logs
-*.log
+
+\*.log
 
 # Documentation
-*.md
+
+\*.md
 !README.md
 
 # Database files
-*.sql
+
+\*.sql
 
 # Metadata and IDE files
+
 .metadata
-*.iml
+\*.iml
 
 # Backup files
-*.bak
+
+\*.bak
 
 # Build scripts (not needed for static deployment)
+
 build.sh
 deploy.sh
 deploy.bat
